# mkdocstrings-pydantic-example

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
example/: __init__.py
